# TabDPT-inference

./: .gitignore  README.md  pyproject.toml
src/tabdpt/: classifier.py  estimator.py  regressor.py  utils.py
tests/: cls_example.py  reg_example.py
