[project]
name = "tabdpt"
version = "1.1.0"
description = "TabDPT"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "appdirs>=1.4.4",
    "faiss-cpu==1.11.0",
    "gdown==5.2.0",
    "huggingface-hub>=0.33.2",
    "numpy>=2.2.0",
    "omegaconf==2.3.0",
    "safetensors>=0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "torch==2.7.1",
    "tqdm==4.67.1",
]
